// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalServiceForm create GitHub 1`] = `
<form
  className="external-service-form "
  onInvalid={[Function]}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className="font-weight-bold"
      htmlFor="test-external-service-form-display-name"
    >
      Display name:
    </label>
    <input
      autoComplete="off"
      autoCorrect="off"
      autoFocus={true}
      className="form-control"
      disabled={false}
      id="test-external-service-form-display-name"
      onChange={[Function]}
      required={true}
      spellCheck={false}
      type="text"
      value="GitHub"
    />
  </div>
  <div
    className="form-group"
  >
    DynamicallyImportedMonacoSettingsEditor
    <p
      className="form-text text-muted"
    >
      <small>
        Use Ctrl+Space for completion, and hover over JSON properties for documentation.
      </small>
    </p>
  </div>
  <button
    className="btn btn-primary mb-3 test-add-external-service-button"
    disabled={false}
    type="submit"
  >
    Add repositories
  </button>
</form>
`;

exports[`ExternalServiceForm edit GitHub 1`] = `
<form
  className="external-service-form "
  onInvalid={[Function]}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className="font-weight-bold"
      htmlFor="test-external-service-form-display-name"
    >
      Display name:
    </label>
    <input
      autoComplete="off"
      autoCorrect="off"
      autoFocus={true}
      className="form-control"
      disabled={false}
      id="test-external-service-form-display-name"
      onChange={[Function]}
      required={true}
      spellCheck={false}
      type="text"
      value="GitHub"
    />
  </div>
  <div
    className="form-group"
  >
    DynamicallyImportedMonacoSettingsEditor
    <p
      className="form-text text-muted"
    >
      <small>
        Use Ctrl+Space for completion, and hover over JSON properties for documentation.
      </small>
    </p>
  </div>
  <button
    className="btn btn-primary mb-3 test-add-external-service-button"
    disabled={false}
    type="submit"
  >
    Add repositories
  </button>
</form>
`;

exports[`ExternalServiceForm edit GitHub, loading 1`] = `
<form
  className="external-service-form "
  onInvalid={[Function]}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className="font-weight-bold"
      htmlFor="test-external-service-form-display-name"
    >
      Display name:
    </label>
    <input
      autoComplete="off"
      autoCorrect="off"
      autoFocus={true}
      className="form-control"
      disabled={true}
      id="test-external-service-form-display-name"
      onChange={[Function]}
      required={true}
      spellCheck={false}
      type="text"
      value="GitHub"
    />
  </div>
  <div
    className="form-group"
  >
    DynamicallyImportedMonacoSettingsEditor
    <p
      className="form-text text-muted"
    >
      <small>
        Use Ctrl+Space for completion, and hover over JSON properties for documentation.
      </small>
    </p>
  </div>
  <button
    className="btn btn-primary mb-3 test-add-external-service-button"
    disabled={true}
    type="submit"
  >
    <div
      className="loading-spinner icon-inline"
    />
    Add repositories
  </button>
</form>
`;
